--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/allyautotte/LIRI-Node-App/issues"
   },
-  "homepage": "https://github.com/allyautotte/LIRI-Node-App#readme"
+  "homepage": "https://github.com/allyautotte/LIRI-Node-App#readme",
+  "dependencies": {
+    "node-spotify-api": "^1.0.7",
+    "twitter": "^1.7.1"
+  }
 }
